--- a/Assets/WebGLTemplates/AirConsole-2020/screen.html
+++ b/Assets/WebGLTemplates/AirConsole-2020/screen.html
@@ -41,6 +41,7 @@
 
       var isUnityEditor = !!getURLParameterByName("unity-editor-websocket-port");
     </script>
+<!--    <script src="http://10.0.2.2:8080/api/airconsole-1.10.0.js"></script>-->
     <script src="https://ci-daniel-native-game-sizing-dot-airconsole.appspot.com/api/airconsole-1.10.0.js"></script>
     <script src="./airconsole-unity-plugin.js"></script>
     <script src="airconsole-settings.js"></script>
