--- a/Assets/AirConsole/examples/pong/controller.html
+++ b/Assets/AirConsole/examples/pong/controller.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="https://www.airconsole.com/api/airconsole-1.9.0.js"></script>
+    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.10.0.js"></script>
     <script>
         const LOBBY = "LOBBY";
         const GAME = "GAME";
