--- a/Assets/AirConsole/examples/translations/translations-controller.html
+++ b/Assets/AirConsole/examples/translations/translations-controller.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-  <script src="https://www.airconsole.com/api/airconsole-1.9.0.js"></script>
+  <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.10.0.js"></script>
   <style>
 
 .text {
