--- a/Assets/WebGLTemplates/AirConsole-2020/index.html
+++ b/Assets/WebGLTemplates/AirConsole-2020/index.html
@@ -41,7 +41,7 @@
 
       var isUnityEditor = !!getURLParameterByName("unity-editor-websocket-port");
     </script>
-    <script type="text/javascript" src="https://www.airconsole.com/api/airconsole-1.10.0.js"></script>
+    <script src="https://www.airconsole.com/api/airconsole-1.10.0.js"></script>
     <script src="./airconsole-unity-plugin.js"></script>
     <script src="airconsole-settings.js"></script>
     <script>
