. B: Fix basic example navigateToPong call

--- a/Assets/AirConsole/examples/basic/controller.html
+++ b/Assets/AirConsole/examples/basic/controller.html
@@ -152,7 +152,7 @@
     };
 
     App.prototype.navigateToPong = function() {
-       this.airconsole.navigateTo("http://games.airconsole.com/pong/");
+       this.airconsole.navigateTo("com.airconsole.testpong");
     };
 
     App.prototype.tellScreenToShowAd = function() {
